# Lossy-Image-Compression

./: .gitignore  README.md  build.sh
array2/src/: lib.rs
bitpack/: Cargo.toml
bitpack/src/: bitpack.rs  lib.rs
rpeg/: Cargo.toml  black.ppm
rpeg/src/: codec.rs  component_video_and_blocks.rs  connor.ppm  conversions.rs  dct_coeff.rs  image.ppm  lib.rs  main.rs  rgb.rs  structs.rs
