[package]
name = "rpeg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csc411_image = "0.3.1"
csc411_arith = "0.1.0"
csc411_rpegio = "0.3.1"
scan_fmt = "^0"
array2 = { path = "../array2" }
bitpack = { path = "../bitpack" }